Обновил до версии Spring Boot 4.1.0, удалил лишнее